--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -1592,7 +1592,8 @@
   abstract = {Since 1990, the Standardization and Terminology Committee of the International Society of Biomechanics has been working towards a recommendation for standardization in the reporting of kinematic data. The paper, which is a result of those efforts (including broad input from members of the Society), is intended as a guide to the presentation of kinematic data in refereed publications and other materials. It is hoped that some uniformity in presentation will make publications easier to read and allow for the more straightforward comparison of data sets from different investigators. It is not intended to restrict individual investigators in the manner in which they collect or process their data. Rather, it could be viewed as a ``output filter'' applied to a variety of data formats to provide uniformity in the final product. The ISB is cognizant of the various attempts at standardization that are being pursued by other organizations-such as CAMARC in Europe, the Clinical Gait Laboratory Group in the U.S.A., and the efforts of individual professional groups such as the Scoliosis Research Society. Where possible, we have sought unanimity with these groups, but on issues where the members of our society expressed strong opinions, we have-at timesstated a contrary view. One example in point is the use of center of mass-based segmental reference frames. Since such reference frames are needed for conventional dynamic analysis, we make the recommendation that such frames should be routinely used. We anticipate that extension to the present document in the future will include recommendations for joint coordinate systems and the definition of anatomical landmarks for locating other segmental reference frames. The committee recognizes that standardization of the description of movement at individual joints is best left to those who are intimately involved in the study of those joints, and we have therefore appointed subcommittees for various joints to provide recommendations. Groups are currently active for the ankle, hand, shoulder, spine, temporomandibular joints, whole body and wrist; members with interests and explrtise in other joints are being actively sought. The initial recommendations of some of these groups have already been published in the ISB Newsletter, and once these recommendation have been discussed by the membership, a subsequent document on joint coordinate systems will be published. The present recommendations are presented as a framework on which future progress can be based. We are grateful to former members of the Standardization and Terminology Committee (notably Professors John Paul, David Winter, and Don Grieve) and to the many ISB members who have commented on earlier drafts of this recommendation. The present paper owes much to the work of Sommer (1991).},
   pmid = {8550644},
   keywords = {📥},
-  annotation = {MAG ID: 1993123013}
+  annotation = {MAG ID: 1993123013},
+  file = {/home/andrew/references/docs/Ge Wu_Peter R. Cavanagh-1995_ISB recommendations for standardization in the reporting of kinematic data/Ge Wu_Peter R. Cavanagh_1995_ISB recommendations for standardization in the reporting of kinematic data.pdf}
 }
 
 @article{ghafurianComputationallyEfficient3D2017,
@@ -1605,7 +1606,8 @@
   pages = {100--108},
   doi = {10.1016/j.neucom.2016.07.070},
   abstract = {Three-dimensional (3D) to two-dimensional (2D) registration is an essential problem in many medical applications. This problem aims at finding the rigid transformation parameters to match the projected image of a 3D model to the real one to estimate the 3D pose of the anatomical model. This class of image registration is computationally intensive due to the large number of solution assessments necessary to search the complex solution space. Moreover, the convergence of the solution process is contingent on a manual initialization of the solution close to the optimal solution. In this paper, we address both of these challenges by introducing a registration method which is significantly faster and less sensitive to initialization than existing methods. The method explores the properties of image gradient probability density function for registration and uses a weighted histogram of image gradient directions (WHGD) as the image feature. This simplifies the computation by searching the parameter space (rotations and translations) sequentially rather than simultaneously. Our experiments demonstrated that the proposed method was able to achieve sub-millimeter and sub-degree accuracy with 5\% of the solution assessments needed by an established existing method. The accuracy was not sensitive to the initial solution as long as it was within 90\textdegree{} and 30mm of the true registration, which is a substantial improvement over the existing methods.},
-  annotation = {MAG ID: 2561888374}
+  annotation = {MAG ID: 2561888374},
+  file = {/home/andrew/references/docs/Ghafurian et al-2017_A computationally efficient 3D-2D registration method based on image gradient/Ghafurian et al_2017_A computationally efficient 3D-2D registration method based on image gradient.pdf}
 }
 
 @article{ghafurianFastGenerationDigitally2016,
@@ -1618,7 +1620,8 @@
   pages = {111--118},
   doi = {10.1117/12.2217756},
   abstract = {Digitally reconstructed radiographs (DRR) are a simulation of radiographic images produced through a perspective projection of the three-dimensional (3D) image (volume) onto a two-dimensional (2D) image plane. The traditional method for the generation of DRRs, namely ray-casting, is a computationally intensive process and accounts for most of solution time in 3D/2D medical image registration frameworks, where a large number of DRRs is required. A few alternate methods for a faster DRR generation have been proposed, the most successful of which are based on the idea of pre-calculating the attenuation value of possible rays. Despite achieving good quality, these methods support a limited range of motion for the volume and entail long pre-calculation time. In this paper, we propose a new preprocessing procedure and data structure for the calculation of the ray attenuation values. This method supports all possible volume positions with practically small memory requirements in addition to reducing the complexity of the problem from O( n  3 ) to O( n  2 ). In our experiments, we generated DRRs of high quality in 63 milliseconds with a preprocessing time of 99.48 seconds and a memory size of 7.45 megabytes.},
-  annotation = {MAG ID: 2301921277}
+  annotation = {MAG ID: 2301921277},
+  file = {/home/andrew/references/docs/Ghafurian et al-2016_Fast generation of digitally reconstructed radiograph through an efficient/Ghafurian et al_2016_Fast generation of digitally reconstructed radiograph through an efficient.pdf}
 }
 
 @article{ghorbaniSOMASolvingOptical2021,
@@ -2721,7 +2724,8 @@
   doi = {10.1088/0031-9155/51/11/004},
   abstract = {Digitally reconstructed radiograph (DRR) generation is an important step in several medical imaging applications such as 2D\textendash 3D image registration, where the generation of DRR is a rate-limiting step. We present a novel DRR generation technique, called the adaptive Monte Carlo volume rendering (AMCVR) algorithm. It is based on the conventional Monte Carlo volume rendering (MCVR) technique that is very efficient for rendering large medical datasets. In contrast to the MCVR, the AMCVR does not produce sample points by sampling directly in the entire volume domain. Instead, it adaptively divides the entire volume domain into sub-domains using importance separation and then performs sampling in these sub-domains. As a result, the AMCVR produces almost the same image quality as that obtained with the MCVR while only using half samples, and increases projection speed by a factor of 2. Moreover, the AMCVR is suitable for fast memory addressing, which further improves processing speed. Independent of the size of medical datasets, the AMCVR allows for achieving a frame rate of about 15 Hz on a 2.8 GHz Pentium 4 PC while generating reasonably good quality DRR.},
   pmid = {16723763},
-  annotation = {MAG ID: 1967729905}
+  annotation = {MAG ID: 1967729905},
+  file = {/home/andrew/references/docs/Li et al-2006_Digitally reconstructed radiograph generation by an adaptive Monte Carlo method/Li et al_2006_Digitally reconstructed radiograph generation by an adaptive Monte Carlo method.pdf;/home/andrew/references/zotero/storage/SLBSZ9MJ/li2006.pdf.pdf}
 }
 
 @article{linEffectsSoftTissue2016,
@@ -3035,7 +3039,8 @@
   abstract = {Abstract   For  in vivo  impact loadings administered under controlled initial conditions, it was hypothesized that larger initial knee angles (IKA) and softer impacting interfaces would reduce impact loading and initial leg stiffness. A human pendulum was used to deliver controlled impacts to the right foot of 21 subjects for three IKA (0, 20 and 40\textdegree ) and three interfaces (barefoot, soft and hard EVA foams). The external impact force and the shock experienced by the subjects' shank were measured simultaneously with a wall mounted force platform and a skin mounted accelerometer, respectively. Stiffness of the leg was derived using impact velocity and wall reaction force data. The results disproved the role of the knee joint in regulating initial leg stiffness and provided only partial support for the hypothesized improved cushioning. Larger knee flexion at contact reduced impact force but increased the shock travelling throughout the shank. Conversely, softer interfaces produced sizable reductions in both initial leg stiffness and severity of the impact experienced by the lower limb. Force rate of loading was found to be highly correlated ( r =0.95) to limb stiffness that was defined by the heel fat pad and interface deformations. These results would suggest that interface interventions are more likely to protect the locomotor system against impact loading than knee angle strategies.},
   pmid = {8945650},
   keywords = {📥},
-  annotation = {MAG ID: 2145427605}
+  annotation = {MAG ID: 2145427605},
+  file = {/home/andrew/references/docs/Mario A. Lafortune et al-1996_Dominant role of interface over knee angle for cushioning impact loading and/Mario A. Lafortune et al_1996_Dominant role of interface over knee angle for cushioning impact loading and.pdf}
 }
 
 @article{marioa.lafortuneFootInversioneversionKnee1994,
